Updated docs to Vavr 0.9.0

--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
-= Javaslang Documentation
+= Vavr Documentation
 
-This is the source of the http://docs.javaslang.io/[Javaslang documentation].
+This is the source of the http://docs.vavr.io/[Vavr documentation].
 
 === Performing Updates
 
@@ -10,5 +10,5 @@ This is the source of the http://docs.javaslang.io/[Javaslang documentation].
   githubPassword=<GitHub password>
 
 * Update the version in `gradle.properties`. Please note that the version in the Maven section of `getting_started.adoc` currently has to be updated manually.
-* Write documentation and test results with `./gradlew asciidoc`. If the Javaslang API has changed, some code example tests might fail.
+* Write documentation and test results with `./gradlew asciidoc`. If the Vavr API has changed, some code example tests might fail.
 * Then `git commit`, `git push` and `./gradlew publishGhPages`
