--- a/src/docs/asciidoc/pattern_matching.adoc
+++ b/src/docs/asciidoc/pattern_matching.adoc
@@ -23,11 +23,11 @@ Pattern matching is a great feature that saves us from writing stacks of if-then
 
 ==== The Basics of Match for Java
 
-With Javaslang 2.0 we introduced a new match API that is close to Scala's match. It is enabled by adding the following import to our application:
+Vavr provides a match API that is close to Scala's match. It is enabled by adding the following import to our application:
 
 [source,java]
 ----
-import static javaslang.API.*;
+import static io.vavr.API.*;
 ----
 
 Having the static methods __Match__, __Case__ and the __atomic patterns__
@@ -64,20 +64,18 @@ Option<String> s = Match(i).option(
 
 ===== Syntactic Sugar
 
-If the first argument of a ``Case`` is a conditional pattern ``$(predicate)``, it can be simplified by directly writing
+As already shown, ``Case`` allows to match conditional patterns.
 
 [source,java]
 ----
-Case(predicate, ...)
+Case($(predicate), ...)
 ----
 
-⚡ Please note that this simplification is not possible for ``$(value)`` because it would raise ambiguities.
-
-Javaslang offers a set of default predicates.
+Vavr offers a set of default predicates.
 
 [source,java]
 ----
-import static javaslang.Predicates.*;
+import static io.vavr.Predicates.*;
 ----
 
 These can be used to express the initial Scala example as follows:
@@ -85,8 +83,8 @@ These can be used to express the initial Scala example as follows:
 [source,java]
 ----
 String s = Match(i).of(  
-    Case(is(1), "one"),
-    Case(is(2), "two"),
+    Case($(is(1)), "one"),
+    Case($(is(2)), "two"),
     Case($(), "?")
 );
 ----
@@ -97,7 +95,7 @@ We use the ``isIn`` predicate to check multiple conditions:
 
 [source,java]
 ----
-Case(isIn("-h", "--help"), ...)
+Case($(isIn("-h", "--help")), ...)
 ----
 
 **Performing Side-Effects**
@@ -107,8 +105,8 @@ Match acts like an expression, it results in a value. In order to perform side-e
 [source,java]
 ----
 Match(arg).of(  
-    Case(isIn("-h", "--help"), o -> run(this::displayHelp)),
-    Case(isIn("-v", "--version"), o -> run(this::displayVersion)),
+    Case($(isIn("-h", "--help")), o -> run(this::displayHelp)),
+    Case($(isIn("-v", "--version")), o -> run(this::displayVersion)),
     Case($(), o -> run(() -> {
         throw new IllegalArgumentException(arg);
     }))
@@ -122,7 +120,7 @@ Match(arg).of(
 [source,java]
 ----
 // Wrong!
-Case(isIn("-h", "--help"), run(this::displayHelp))
+Case($(isIn("-h", "--help")), run(this::displayHelp))
 ----
 
 Otherwise the Cases will be eagerly evaluated __before__ the patterns are matched, which breaks the whole Match expression. Instead we use it within a lambda body:
@@ -130,20 +128,20 @@ Otherwise the Cases will be eagerly evaluated __before__ the patterns are matche
 [source,java]
 ----
 // Ok
-Case(isIn("-h", "--help"), o -> run(this::displayHelp))
+Case($(isIn("-h", "--help")), o -> run(this::displayHelp))
 ----
 
 As we can see, ``run`` is error prone if not used right. Be careful. We consider deprecating it in a future release and maybe we will also provide a better API for performing side-effects.
 
 ===== Named Parameters
 
-Javaslang leverages lambdas to provide named parameters for matched values.
+Vavr leverages lambdas to provide named parameters for matched values.
 
 [source,java]
 ----
 Number plusOne = Match(obj).of(  
-    Case(instanceOf(Integer.class), i -> i + 1),
-    Case(instanceOf(Double.class), d -> d + 1),
+    Case($(instanceOf(Integer.class)), i -> i + 1),
+    Case($(instanceOf(Double.class)), d -> d + 1),
     Case($(), o -> { throw new NumberFormatException(); })
 );
 ----
@@ -166,15 +164,15 @@ Object destruction is not necessarily a unique operation. For example, a LocalDa
 
 ==== Patterns
 
-In Javaslang we use patterns to define how an instance of a specific type is deconstructed. These patterns can be used in conjunction with the Match API.
+In Vavr we use patterns to define how an instance of a specific type is deconstructed. These patterns can be used in conjunction with the Match API.
 
 ===== Predefined Patterns
 
-For many Javaslang types there already exist match patterns. They are imported via
+For many Vavr types there already exist match patterns. They are imported via
 
 [source,java]
 ----
-import static javaslang.Patterns.*;
+import static io.vavr.Patterns.*;
 ----
 
 For example we are now able to match the result of a Try:
@@ -182,18 +180,18 @@ For example we are now able to match the result of a Try:
 [source,java]
 ----
 Match(_try).of(  
-    Case(Success($()), value -> ...),
-    Case(Failure($()), x -> ...)
+    Case($Success($()), value -> ...),
+    Case($Failure($()), x -> ...)
 );
 ----
 
-⚡ A first prototype of Javaslang's Match API allowed to extract a user-defined selection of objects from a match pattern. Without proper compiler support this isn't practicable because the number of generated methods exploded exponentially. The current API makes the compromise that all patterns are matched but only the root patterns are __decomposed__.
+⚡ A first prototype of Vavr's Match API allowed to extract a user-defined selection of objects from a match pattern. Without proper compiler support this isn't practicable because the number of generated methods exploded exponentially. The current API makes the compromise that all patterns are matched but only the root patterns are __decomposed__.
 
 [source,java]
 ----
 Match(_try).of(  
-    Case(Success(Tuple2($("a"), $())), tuple2 -> ...),
-    Case(Failure($(instanceOf(Error.class))), error -> ...)
+    Case($Success(Tuple2($("a"), $())), tuple2 -> ...),
+    Case($Failure($(instanceOf(Error.class))), error -> ...)
 );
 ----
 
@@ -203,15 +201,15 @@ Here the root patterns are Success and Failure. They are decomposed to Tuple2 an
 
 ===== User-Defined Patterns
 
-It is essential to be able to unapply arbitrary objects, including instances of final classes. Javaslang does this in a declarative style by providing the compile time annotations ``@Patterns`` and ``@Unapply``.
+It is essential to be able to unapply arbitrary objects, including instances of final classes. Vavr does this in a declarative style by providing the compile time annotations ``@Patterns`` and ``@Unapply``.
 
-To enable the annotation processor the artifact http://search.maven.org/#search%7Cga%7C1%7Cjavaslang-match[javaslang-match] needs to be added as project dependency.
+To enable the annotation processor the artifact http://search.maven.org/#search%7Cga%7C1%7Cvavr-match[vavr-match] needs to be added as project dependency.
 
 ⚡ Note: Of course the patterns can be implemented directly without using the code generator. For more information take a look at the generated source.
 
 [source,java]
 ----
-import javaslang.match.annotation.*;
+import io.vavr.match.annotation.*;
 
 @Patterns
 class My {
@@ -232,33 +230,19 @@ Now we are able to match Optionals using __guards__.
 [source,java]
 ----
 Match(optional).of(  
-    Case(Optional($(v -> v != null)), "defined"),
-    Case(Optional($(v -> v == null)), "empty")
+    Case($Optional($(v -> v != null)), "defined"),
+    Case($Optional($(v -> v == null)), "empty")
 );
 ----
 
 The predicates could be simplified by implementing ``isNull`` and ``isNotNull``.
 
-⚡ And yes, extracting null is weird. Instead of using Java's Optional give Javaslang's Option a try!
+⚡ And yes, extracting null is weird. Instead of using Java's Optional give Vavr's Option a try!
 
 [source,java]
 ----
 Match(option).of(  
-    Case(Some($()), "defined"),
-    Case(None(), "empty")
+    Case($Some($()), "defined"),
+    Case($None(), "empty")
 );
-----
-
-==== Sneak Preview
-
-One of the next releases of Javaslang could contain more default predicates, like
-
-*   ``isNull``
-*   ``isNotNull`` resp. ``nonNull``
-*   etc.
-
-The patterns could have a guard-method 'If' (modulo naming) that is able to check a condition that involves all decomposed values:
-
-----
-Case(Pattern(...).If(predicate), function)
 ----
