--- a/src/docs/asciidoc/usage_guide.adoc
+++ b/src/docs/asciidoc/usage_guide.adoc
@@ -1,9 +1,9 @@
 == Usage Guide
 
-Javaslang comes along with well designed representations of some of the most basic types which apparently are missing or rudimentary in Java: `Tuple`, `Value` and `λ`.
-In Javaslang, all is built upon these three basic building blocks:
+Vavr comes along with well designed representations of some of the most basic types which apparently are missing or rudimentary in Java: `Tuple`, `Value` and `λ`.
+In Vavr, all is built upon these three basic building blocks:
 
-image::images/javaslang-overview.png[Javaslang Overview]
+image::images/vavr-overview.png[Vavr Overview]
 
 === Tuples
 
@@ -15,7 +15,7 @@ Here is an example of how to create a tuple holding a String and an Integer:
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/TupleDemo.java[tags=createTuple]
+include::../../test/java/io/vavr/TupleDemo.java[tags=createTuple]
 ----
 <1> A tuple is created via the static factory method `Tuple.of()`
 <2> Get the 1st element of this tuple.
@@ -27,7 +27,7 @@ The component-wise map evaluates a function per element in the tuple, returning 
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/TupleDemo.java[tags=bimapTuple]
+include::../../test/java/io/vavr/TupleDemo.java[tags=bimapTuple]
 ----
 
 ==== Map a tuple using one mapper
@@ -36,7 +36,7 @@ It is also possible to map a tuple using one mapping function.
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/TupleDemo.java[tags=mapTuple]
+include::../../test/java/io/vavr/TupleDemo.java[tags=mapTuple]
 ----
 
 ==== Transform a tuple
@@ -45,34 +45,34 @@ Transform creates a new type based on the tuple's contents.
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/TupleDemo.java[tags=transformTuple]
+include::../../test/java/io/vavr/TupleDemo.java[tags=transformTuple]
 ----
 
 === Functions
 
-Functional programming is all about values and transformation of values using functions. Java 8 just provides a `Function` which accepts one parameter and a `BiFunction` which accepts two parameters. Javaslang provides functions up to a limit of 8 parameters. The functional interfaces are of called `Function0, Function1, Function2, Function3` and so on. If you need a function which throws a checked exception you can use `CheckedFunction1, CheckedFunction2` and so on.
+Functional programming is all about values and transformation of values using functions. Java 8 just provides a `Function` which accepts one parameter and a `BiFunction` which accepts two parameters. Vavr provides functions up to a limit of 8 parameters. The functional interfaces are of called `Function0, Function1, Function2, Function3` and so on. If you need a function which throws a checked exception you can use `CheckedFunction1, CheckedFunction2` and so on.
 The following lambda expression creates a function to sum two integers:
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=createFunctionWithLambda]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=createFunctionWithLambda]
 ----
 
 This is a shorthand for the following anonymous class definition:
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=createFunctionWithAnonymousClass]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=createFunctionWithAnonymousClass]
 ----
 
 You can also use the static factory method `Function3.of(...)` to a create a function from any method reference.
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=createFunctionWithFactoryMethod]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=createFunctionWithFactoryMethod]
 ----
 
-In fact Javaslang functional interfaces are Java 8 functional interfaces on steroids. They also provide features like:
+In fact Vavr functional interfaces are Java 8 functional interfaces on steroids. They also provide features like:
 
 * Composition
 * Lifting
@@ -85,14 +85,14 @@ You can use either `andThen`:
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=composeFunctions1]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=composeFunctions1]
 ----
 
 or `compose`:
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=composeFunctions2]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=composeFunctions2]
 ----
 
 ==== Lifting
@@ -102,14 +102,14 @@ The following method `divide` is a partial function that only accepts non-zero d
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=partialDivideFunction]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=partialDivideFunction]
 ----
 
 We use `lift` to turn `divide` into a total function that is defined for all inputs.
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=liftedDivideFunction]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=liftedDivideFunction]
 ----
 
 <1> A lifted function returns `None` instead of throwing an exception, if the function is invoked with disallowed input values.
@@ -119,7 +119,7 @@ The following method `sum` is a partial function that only accepts positive inpu
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=partialFunctionExample]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=partialFunctionExample]
 ----
 <1> The function `sum` throws an `IllegalArgumentException` for negative input values.
 
@@ -127,7 +127,7 @@ We may lift the `sum` method by providing the methods reference.
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=liftMethodReference]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=liftMethodReference]
 ----
 <1> The lifted function catches the `IllegalArgumentException` and maps it to `None`.
 
@@ -136,14 +136,14 @@ Partial application allows you to derive a new function from an existing one by 
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=partialApplicationFunction]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=partialApplicationFunction]
 ----
 <1> The first parameter `a` is fixed to the value 2.
 
 This can be demonstrated by fixing the first three parameters of a `Function5`, resulting in a `Function2`.
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=partialApplicationFunctionArity5]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=partialApplicationFunctionArity5]
 ----
 <1> The `a`, `b` and `c` parameters are fixed to the values 2, 3 and 1 respectively.
 
@@ -156,7 +156,7 @@ When a `Function2` is _curried_, the result is indistinguishable from the _parti
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=curryingFunction]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=curryingFunction]
 ----
 <1> The first parameter `a` is fixed to the value 2.
 
@@ -164,7 +164,7 @@ You might notice that, apart from the use of `.curried()`, this code is identica
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=curryingFunctionArity3]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=curryingFunctionArity3]
 ----
 <1> Note the presence of additional functions in the parameters.
 <2> Further calls to `apply` returns another `Function1`, apart from the final call.
@@ -175,12 +175,12 @@ The following example calculates a random number on the first invocation and ret
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/FunctionsDemo.java[tags=memoizedFunction]
+include::../../test/java/io/vavr/FunctionsDemo.java[tags=memoizedFunction]
 ----
 
 === Values
 In a functional setting we see a value as a kind of https://en.wikipedia.org/wiki/Normal_form_(abstract_rewriting)[normal form], it cannot be further evaluated. In Java we express this by making the state of an object final and call it https://en.wikipedia.org/wiki/Immutable_object[immutable].
-Javaslang's functional Value abstracts over immutable objects. Efficient write operations are added by sharing immutable memory between instances. What we get is thread-safety for free!
+Vavr's functional Value abstracts over immutable objects. Efficient write operations are added by sharing immutable memory between instances. What we get is thread-safety for free!
 
 ==== Option
 Option is a monadic container type which represents an optional value. Instances of Option are either an instance of `Some` or the `None`.
@@ -191,34 +191,34 @@ Option is a monadic container type which represents an optional value. Instances
 Option<T> option = Option.of(...);
 ----
 
-If you're coming to Javaslang after using Java's `Optional` class, there is a crucial difference.  In `Optional`, a call to `.map` that results in a null will result in an empty `Optional`.  In Javaslang, it would result in a `Some(null)` that can then lead to a `NullPointerException`.
+If you're coming to Vavr after using Java's `Optional` class, there is a crucial difference.  In `Optional`, a call to `.map` that results in a null will result in an empty `Optional`.  In Vavr, it would result in a `Some(null)` that can then lead to a `NullPointerException`.
 
 Using `Optional`, this scenario is valid.
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/OptionDemo.java[tags=javaOptionalWithMappedNull]
+include::../../test/java/io/vavr/OptionDemo.java[tags=javaOptionalWithMappedNull]
 ----
 <1> The option is `Some("foo")`
 <2> The resulting option becomes empty here
 
-Using Javaslang's `Option`, the same scenario will result in a `NullPointerException`.
+Using Vavr's `Option`, the same scenario will result in a `NullPointerException`.
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/OptionDemo.java[tags=javaslangOptionWithMappedNull]
+include::../../test/java/io/vavr/OptionDemo.java[tags=vavrOptionWithMappedNull]
 ----
 <1> The option is `Some("foo")`
 <2> The resulting option is `Some(null)`
 <3> The call to `s.toUpperCase()` is invoked on a `null`
 
-This seems like Javaslang's implementation is broken, but in fact it's not - rather, it adheres to the requirement of a monad to maintain computational context when calling `.map`.  In terms of an `Option`, this means that calling `.map` on a `Some` will result in a `Some`, and calling `.map` on a `None` will result in a `None`.  In the Java `Optional` example above, that context changed from a `Some` to a `None`.
+This seems like Vavr's implementation is broken, but in fact it's not - rather, it adheres to the requirement of a monad to maintain computational context when calling `.map`.  In terms of an `Option`, this means that calling `.map` on a `Some` will result in a `Some`, and calling `.map` on a `None` will result in a `None`.  In the Java `Optional` example above, that context changed from a `Some` to a `None`.
 
 This may seem to make `Option` useless, but it actually forces you to pay attention to possible occurrences of `null` and deal with them accordingly instead of unknowingly accepting them.  The correct way to deal with occurrences of `null` is to use `flatMap`.
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/OptionDemo.java[tags=flatMapNullParameter]
+include::../../test/java/io/vavr/OptionDemo.java[tags=flatMapNullParameter]
 ----
 <1> The option is `Some("foo")`
 <2> The resulting option is `Some(null)`
@@ -228,13 +228,12 @@ Alternatively, move the `.flatMap` to be co-located with the the possibly `null`
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/OptionDemo.java[tags=mapOptionParameter]
+include::../../test/java/io/vavr/OptionDemo.java[tags=mapOptionParameter]
 ----
 <1> The option is `Some("foo")`
 <2> The resulting option is `None`
-<3> This step never occurs because the option is a `None`
 
-This is explored in more detail on the http://blog.javaslang.io/the-agonizing-death-of-an-astronaut/[Javaslang blog].
+This is explored in more detail on the http://blog.vavr.io/the-agonizing-death-of-an-astronaut/[Vavr blog].
 
 ==== Try
 Try is a monadic container type which represents a computation that may either result in an exception, or return a successfully computed value. It's similar to, but semantically different from `Either`. Instances of Try, are either an instance of `Success` or `Failure`.
@@ -247,11 +246,14 @@ Try.of(() -> bunchOfWork()).getOrElse(other);
 
 [source,java,indent=0]
 ----
+import static io.vavr.API.*;        // $, Case, Match
+import static io.vavr.Predicates.*; // instanceOf
+
 A result = Try.of(this::bunchOfWork)
     .recover(x -> Match(x).of(
-        Case(instanceOf(Exception_1.class), ...),
-        Case(instanceOf(Exception_2.class), ...),
-        Case(instanceOf(Exception_n.class), ...)
+        Case($(instanceOf(Exception_1.class)), t -> somethingWithException(t)),
+        Case($(instanceOf(Exception_2.class)), t -> somethingWithException(t)),
+        Case($(instanceOf(Exception_n.class)), t -> somethingWithException(t))
     ))
     .getOrElse(other);
 ----
@@ -261,7 +263,7 @@ Lazy is a monadic container type which represents a lazy evaluated value. Compar
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/LazyDemo.java[tags=createLazy]
+include::../../test/java/io/vavr/LazyDemo.java[tags=createLazy]
 ----
 
 Since version 2.0.0 you may also create a real lazy value (works only with interfaces):
@@ -308,7 +310,7 @@ Example: We get the fields 'name' and 'age' from a web form and want to create e
 
 [source,java,indent=0]
 ----
-include::../../test/java/javaslang/ValidationDemo.java[tags=validatePerson]
+include::../../test/java/io/vavr/ValidationDemo.java[tags=validatePerson]
 ----
 
 A valid value is contained in a `Validation.Valid` instance, a list of validation errors is contained in a `Validation.Invalid` instance.
@@ -316,20 +318,20 @@ A valid value is contained in a `Validation.Valid` instance, a list of validatio
 The following validator is used to combine different validation results to one `Validation` instance.
 
 ----
-include::../../test/java/javaslang/ValidationDemo.java[tags=personValidator]
+include::../../test/java/io/vavr/ValidationDemo.java[tags=personValidator]
 ----
 
 If the validation succeeds, i.e. the input data is valid, then an instance of `Person` is created of the given fields `name` and `age`.
 
 ----
-include::../../test/java/javaslang/ValidationDemo.java[tags=person]
+include::../../test/java/io/vavr/ValidationDemo.java[tags=person]
 ----
 
 === Collections
 
-With Javaslang there has been put much effort into designing an all-new collection library for Java which meets the requirements of functional programming, namely immutability.
+With Vavr there has been put much effort into designing an all-new collection library for Java which meets the requirements of functional programming, namely immutability.
 
-Java's Stream lifts a computation to a different layer and links to a specific collection in another explicit step. With Javaslang we don't need all this additional boilerplate.
+Java's Stream lifts a computation to a different layer and links to a specific collection in another explicit step. With Vavr we don't need all this additional boilerplate.
 
 The new collections are based on http://docs.oracle.com/javase/8/docs/api/java/lang/Iterable.html[java.lang.Iterable], so they leverage the sugared iteration style.
 
@@ -345,7 +347,7 @@ for (double random : Stream.gen(Math::random).take(1000)) {
 
 ==== List
 
-Javaslang's `List` is an immutable linked list. Mutations create new instances. Most operations are performed in linear time. Consequent operations are executed one by one.
+Vavr's `List` is an immutable linked list. Mutations create new instances. Most operations are performed in linear time. Consequent operations are executed one by one.
 
 ===== Java 8
 
@@ -359,17 +361,17 @@ Arrays.asList(1, 2, 3).stream().reduce((i, j) -> i + j);
 IntStream.of(1, 2, 3).sum();
 ----
 
-===== Javaslang
+===== Vavr
 
 [source,java]
 ----
-// javaslang.collection.List
+// io.vavr.collection.List
 List.of(1, 2, 3).sum();
 ----
 
 ==== Stream
 
-The `javaslang.collection.Stream` implementation is a lazy linked list. Values are computed only when needed. Because of its laziness, most operations are performed in constant time. Operations are intermediate in general and executed in a single pass.
+The `io.vavr.collection.Stream` implementation is a lazy linked list. Values are computed only when needed. Because of its laziness, most operations are performed in constant time. Operations are intermediate in general and executed in a single pass.
 
 The stunning thing about streams is that we can use them to represent sequences that are (theoretically) infinitely long.
 
