replaced remote google fonts with local font-awesome

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -9,6 +9,10 @@ Daniel Dietrich, Robert Winkler
 :revdate: {localdate}
 :icons: font
 :pagenums:
+:webfonts!: 
+:iconfont-remote!:
+:iconfont-name: css/font-awesome-4.7.0/css/font-awesome
+
 
 include::introduction.adoc[]
 
